# rustpp

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
include/rustpp/: Result.hpp  config.hpp  match.hpp  rustpp.hpp  types.hpp
tests/: CMakeLists.txt  Result.cpp  types.cpp
